Add hover elements

--- a/prof-layout/index.html
+++ b/prof-layout/index.html
@@ -75,6 +75,12 @@
             <div class="card_items">
                 <div class="card">
                     <div class="img">
+                        <div class="hover">
+                            <button class="button_add-to-cart">
+                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <p class="text_p_add-to-cart">Add to cart</p>
+                            </button>
+                        </div>
                         <img src="/prof-layout/images/card.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
@@ -83,6 +89,12 @@
                 </div>
                 <div class="card">
                     <div class="img">
+                        <div class="hover">
+                            <button class="button_add-to-cart">
+                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <p class="text_p_add-to-cart">Add to cart</p>
+                            </button>
+                        </div>
                         <img src="/prof-layout/images/card (2).png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
@@ -91,6 +103,12 @@
                 </div>
                 <div class="card">
                     <div class="img">
+                        <div class="hover">
+                            <button class="button_add-to-cart">
+                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <p class="text_p_add-to-cart">Add to cart</p>
+                            </button>
+                        </div>
                         <img src="/prof-layout/images/card (3).png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
@@ -99,6 +117,12 @@
                 </div>
                 <div class="card">
                     <div class="img">
+                        <div class="hover">
+                            <button class="button_add-to-cart">
+                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <p class="text_p_add-to-cart">Add to cart</p>
+                            </button>
+                        </div>
                         <img src="/prof-layout/images/card (4).png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
@@ -107,6 +131,12 @@
                 </div>
                 <div class="card">
                     <div class="img">
+                        <div class="hover">
+                            <button class="button_add-to-cart">
+                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <p class="text_p_add-to-cart">Add to cart</p>
+                            </button>
+                        </div>
                         <img src="/prof-layout/images/card (5).png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
@@ -115,6 +145,12 @@
                 </div>
                 <div class="card">
                     <div class="img">
+                        <div class="hover">
+                            <button class="button_add-to-cart">
+                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <p class="text_p_add-to-cart">Add to cart</p>
+                            </button>
+                        </div>
                         <img src="/prof-layout/images/card (6).png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
