--- a/prof-layout/index.html
+++ b/prof-layout/index.html
@@ -78,7 +78,7 @@
                         <div class="hover">
                             <button class="button_add-to-cart">
                                 <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
-                                <p class="text_p_add-to-cart">Add to cart</p>
+                                Add to cart
                             </button>
                         </div>
                         <img src="/prof-layout/images/card.png" alt="">
@@ -92,10 +92,10 @@
                         <div class="hover">
                             <button class="button_add-to-cart">
                                 <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
-                                <p class="text_p_add-to-cart">Add to cart</p>
+                                Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card (2).png" alt="">
+                        <img src="/prof-layout/images/card2.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -106,10 +106,10 @@
                         <div class="hover">
                             <button class="button_add-to-cart">
                                 <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
-                                <p class="text_p_add-to-cart">Add to cart</p>
+                                Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card (3).png" alt="">
+                        <img src="/prof-layout/images/card3.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -120,10 +120,10 @@
                         <div class="hover">
                             <button class="button_add-to-cart">
                                 <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
-                                <p class="text_p_add-to-cart">Add to cart</p>
+                                Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card (4).png" alt="">
+                        <img src="/prof-layout/images/card4.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -134,10 +134,10 @@
                         <div class="hover">
                             <button class="button_add-to-cart">
                                 <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
-                                <p class="text_p_add-to-cart">Add to cart</p>
+                                Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card (5).png" alt="">
+                        <img src="/prof-layout/images/card5.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -148,10 +148,10 @@
                         <div class="hover">
                             <button class="button_add-to-cart">
                                 <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
-                                <p class="text_p_add-to-cart">Add to cart</p>
+                                Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card (6).png" alt="">
+                        <img src="/prof-layout/images/card6.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -191,7 +191,7 @@
                 <div class="subs-and-prom_right">
                     <h3 class="text_h3_subs-and-prom">SUBSCRIBE</h3>
                     <h4 class="text_h4_subs-and-prom">FOR OUR NEWLETTER AND PROMOTION</h4>
-                    <form action="">
+                    <form action="#">
                         <input type="email" class="text-area" placeholder="Enter Your Email">
                         <button class="button_sub">Subscribe</button>
                     </form>
