fixed image links

--- a/prof-layout/index.html
+++ b/prof-layout/index.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/prof-layout/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="top">
         <div class="menu container">
             <ul class="menu_left">
-                <li class="menu_left_item"><img src="/prof-layout/images/logo.png" alt=""></li>
-                <li class="menu_left_item"><img src="/prof-layout/images/search.svg" alt=""></li>
+                <li class="menu_left_item"><img src="images/logo.png" alt=""></li>
+                <li class="menu_left_item"><img src="images/search.svg" alt=""></li>
             </ul>
             <ul class="menu_right">
-                <li class="menu_right_item"><img src="/prof-layout/images/menu.svg" alt=""></li>
-                <li class="menu_right_item"><img src="/prof-layout/images/profile.svg" alt=""></li>
-                <li class="menu_right_item"><img src="/prof-layout/images/cart.svg" alt=""></li>
+                <li class="menu_right_item"><img src="images/menu.svg" alt=""></li>
+                <li class="menu_right_item"><img src="images/profile.svg" alt=""></li>
+                <li class="menu_right_item"><img src="images/cart.svg" alt=""></li>
             </ul>
         </div>
     </div>
     <div class="top_bottom">
         <div class="poster container">
             <div class="poster_left">
-                <img src="/prof-layout/images/poster_man.png" alt="">
+                <img src="images/poster_man.png" alt="">
             </div>
             <div class="poster_right">
                 <div class="poster_right_text">
@@ -77,11 +77,11 @@
                     <div class="img">
                         <div class="hover">
                             <button class="button_add-to-cart">
-                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <img class="cart_img" src="images/cart.svg" alt="">
                                 Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card.png" alt="">
+                        <img src="images/card.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -91,11 +91,11 @@
                     <div class="img">
                         <div class="hover">
                             <button class="button_add-to-cart">
-                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <img class="cart_img" src="images/cart.svg" alt="">
                                 Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card2.png" alt="">
+                        <img src="images/card2.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -105,11 +105,11 @@
                     <div class="img">
                         <div class="hover">
                             <button class="button_add-to-cart">
-                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <img class="cart_img" src="images/cart.svg" alt="">
                                 Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card3.png" alt="">
+                        <img src="images/card3.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -119,11 +119,11 @@
                     <div class="img">
                         <div class="hover">
                             <button class="button_add-to-cart">
-                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <img class="cart_img" src="images/cart.svg" alt="">
                                 Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card4.png" alt="">
+                        <img src="images/card4.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -133,11 +133,11 @@
                     <div class="img">
                         <div class="hover">
                             <button class="button_add-to-cart">
-                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <img class="cart_img" src="images/cart.svg" alt="">
                                 Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card5.png" alt="">
+                        <img src="images/card5.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -147,11 +147,11 @@
                     <div class="img">
                         <div class="hover">
                             <button class="button_add-to-cart">
-                                <img class="cart_img" src="/prof-layout/images/cart.svg" alt="">
+                                <img class="cart_img" src="images/cart.svg" alt="">
                                 Add to cart
                             </button>
                         </div>
-                        <img src="/prof-layout/images/card6.png" alt="">
+                        <img src="images/card6.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -167,17 +167,17 @@
     <div class="bottom">
         <div class="benefits container">
             <div class="bf_card">
-                <img src="/prof-layout/images/ftr_delivery.svg" alt="">
+                <img src="images/ftr_delivery.svg" alt="">
                 <h3 class="text_h3_bf">Free Delivery</h3>
                 <p class="text_p_bf">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
             </div>
             <div class="bf_card">
-                <img src="/prof-layout/images/sales.svg" alt="">
+                <img src="images/sales.svg" alt="">
                 <h3 class="text_h3_bf">Sales & discounts</h3>
                 <p class="text_p_bf">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
             </div>
             <div class="bf_card">
-                <img src="/prof-layout/images/crown.svg" alt="">
+                <img src="images/crown.svg" alt="">
                 <h3 class="text_h3_bf">Quality assurance</h3>
                 <p class="text_p_bf">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
             </div>
@@ -185,7 +185,7 @@
         <div class="subs-and-prom">
             <div class="smoth">
                 <div class="subs-and-prom_left">
-                    <img src="/prof-layout/images/Intersect.png" alt="">
+                    <img src="images/Intersect.png" alt="">
                     <p class="text_p_subs-and-prom">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
                 </div>
                 <div class="subs-and-prom_right">
@@ -203,10 +203,10 @@
                 <p class="text_p_copy">© 2021  Brand  All Rights Reserved.</p>
             </div>
             <div class="copy_right">
-                <div class="square"><img src="/prof-layout/images/copy_fb.svg" alt=""></div>
-                <div class="square"><img src="/prof-layout/images/copy_inst.svg" alt=""></div>
-                <div class="square"><img src="/prof-layout/images/copy_pin.svg" alt=""></div>
-                <div class="square"><img src="/prof-layout/images/copy_twit.svg" alt=""></div>
+                <div class="square"><img src="images/copy_fb.svg" alt=""></div>
+                <div class="square"><img src="images/copy_inst.svg" alt=""></div>
+                <div class="square"><img src="images/copy_pin.svg" alt=""></div>
+                <div class="square"><img src="images/copy_twit.svg" alt=""></div>
             </div>
         </div>
     </div>
