Add adaptive from tablet

--- a/prof-layout/index.html
+++ b/prof-layout/index.html
@@ -40,18 +40,27 @@
             <div class="categories_items">
                 <div class="categories_items_small">
                     <div class="card_small_women">
+                        <div class="image">
+                            <img src="images/women.png" alt="">
+                        </div>
                         <div class="card_text">
                             <h1 class="text_h3_cat">30% off</h1>
                             <h3 class="text_h1_cat"><span class="colortext">for women</span></h3>
                         </div>
                     </div>
                     <div class="card_small_men">
+                            <div class="image">
+                                <img src="images/men.png" alt="">
+                            </div>
                             <div class="card_text">
                                 <h1 class="text_h3_cat">hot deals</h1>
                                 <h3 class="text_h1_cat"><span class="colortext">for men</span></h3>
                             </div>
                     </div>
                     <div class="card_small_kids">
+                        <div class="image">
+                            <img src="images/kids.png" alt="">
+                        </div>
                         <div class="card_text">
                             <h1 class="text_h3_cat">new arrivals</h1>
                             <h3 class="text_h1_cat"><span class="colortext">for kids</span></h3>
@@ -59,6 +68,9 @@
                     </div>
                 </div>
                 <div class="categories_items_big">
+                    <div class="image">
+                        <img src="images/accesories.png" alt="">
+                    </div>
                     <div class="card_text">
                         <h3 class="text_h3_cat">Luxury & trendy</h3>
                         <h1 class="text_h1_cat"><span class="colortext">Accesories</span></h1>
