Add adaptive from mobile

--- a/prof-layout/index.html
+++ b/prof-layout/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="categories_items_big">
                     <div class="image">
-                        <img src="images/accesories.png" alt="">
+                        <img class="extra_img_cat" src="images/accesories.png" alt="">
                     </div>
                     <div class="card_text">
                         <h3 class="text_h3_cat">Luxury & trendy</h3>
@@ -107,7 +107,7 @@
                                 Add to cart
                             </button>
                         </div>
-                        <img src="images/card2.png" alt="">
+                        <img class="extra_img" src="images/card2.png" alt="">
                     </div>
                     <h3 class="text_h3_card">ELLERY X M'O CAPSULE</h3>
                     <p class="text_p_card">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
