--- a/site-portfolio/index.html
+++ b/site-portfolio/index.html
@@ -41,19 +41,41 @@
                 </div>
             </div>
             <div class="roadMap">
+                <h3 class="text_h3_roadMap">My path in development</h3>
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
                         <div class="verticalLine verticalLine_start"></div>
                         <div class="circle"><p class="circle_symbol"></p></div>
                     </div>
-                    <div class="roadMap_item_content"><p class="p_roadMap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
+                    <div class="roadMap_item_content"><p class="p_roadMap">Basics of programming</p></div>
                 </div>
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
                         <div class="verticalLine verticalLine_middle"></div>
                         <div class="circle"><p class="circle_symbol"></p></div>
                     </div>
-                    <div class="roadMap_item_content"><p class="p_roadMap">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, possimus!</p></div>
+                    <div class="roadMap_item_content"><p class="p_roadMap">Git.</p></div>
+                </div>
+                <div class="roadMap_item">
+                    <div class="roadMap_item_checkPoint">
+                        <div class="verticalLine verticalLine_middle"></div>
+                        <div class="circle"><p class="circle_symbol"></p></div>
+                    </div>
+                    <div class="roadMap_item_content"><p class="p_roadMap">HTML/CSS</p></div>
+                </div>
+                <div class="roadMap_item">
+                    <div class="roadMap_item_checkPoint">
+                        <div class="verticalLine verticalLine_middle"></div>
+                        <div class="circle"><p class="circle_symbol"></p></div>
+                    </div>
+                    <div class="roadMap_item_content"><p class="p_roadMap">Adaptive layout</p></div>
+                </div>
+                <div class="roadMap_item">
+                    <div class="roadMap_item_checkPoint">
+                        <div class="verticalLine verticalLine_middle"></div>
+                        <div class="circle"><p class="circle_symbol"></p></div>
+                    </div>
+                    <div class="roadMap_item_content"><p class="p_roadMap">Preprocessors. Sass.</p></div>
                 </div>
                 <div class="roadMap_item">
                     <div class="roadMap_item_checkPoint">
@@ -71,12 +93,20 @@
                 </div>
             </div>
             <div class="projects">
+                <div class="project_item2">
+                    <div class="project_label">
+                        <h1 class="project_name">Online shop</h1>
+                        <p class="project_p">Adaptive cross-browser layout of the online store with interactive elements. Looks great on both PC and tablets, as well as on mobile devices.
+                        </p>
+                    </div>
+                    <img class="project_img" src="images/online-shop.PNG" alt="project_image">
+                </div>
                 <div class="project_item1">
                     <div class="project_label">
-                        <h1 class="project_name">Trafic Counter</h1>
-                        <p class="project_p">Manual traffic counter is a utility to facilitate traffic counting. Get rid of paper notes.</p>
+                        <h1 class="project_name">Responsive website template</h1>
+                        <p class="project_p">A two-page business card website of your company with the most necessary information for the client and your contacts for communications. Responsive, cross browser.</p>
                     </div>
-                    <img class="project_img" src="../html-css/img/Traffic_Counter.PNG" alt="project_image">
+                    <img class="project_img" src="../html-css/img/Figma_Project.PNG" alt="project_image">
                 </div>
                 <div class="project_item2">
                     <div class="project_label">
@@ -86,7 +116,13 @@
                     </div>
                     <img class="project_img" src="../html-css/img/Figma_Project.PNG" alt="project_image">
                 </div>
-                <div class="project_item3"></div>
+                <div class="project_item1">
+                    <div class="project_label">
+                        <h1 class="project_name">Trafic Counter</h1>
+                        <p class="project_p">Manual traffic counter is a utility to facilitate traffic counting. Get rid of paper notes.</p>
+                    </div>
+                    <img class="project_img" src="../html-css/img/Traffic_Counter.PNG" alt="project_image">
+                </div>
             </div>
         </div>
     </div>
