--- a/site-portfolio/index.html
+++ b/site-portfolio/index.html
@@ -95,7 +95,7 @@
             <div class="projects">
                 <div class="project_item2">
                     <div class="project_label">
-                        <h1 class="project_name">Online shop</h1>
+                        <h1 class="project_name"><a href="../prof-layout/index.html">Online shop</a></h1>
                         <p class="project_p">Adaptive cross-browser layout of the online store with interactive elements. Looks great on both PC and tablets, as well as on mobile devices.
                         </p>
                     </div>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="project_item1">
                     <div class="project_label">
-                        <h1 class="project_name">Responsive website template</h1>
+                        <h1 class="project_name"><a href="../html-css/index.html">Responsive website template</a></h1>
                         <p class="project_p">A two-page business card website of your company with the most necessary information for the client and your contacts for communications. Responsive, cross browser.</p>
                     </div>
                     <img class="project_img" src="../html-css/img/Figma_Project.PNG" alt="project_image">
@@ -118,7 +118,7 @@
                 </div>
                 <div class="project_item1">
                     <div class="project_label">
-                        <h1 class="project_name">Trafic Counter</h1>
+                        <h1 class="project_name"><a href="#">Trafic Counter</a></h1>
                         <p class="project_p">Manual traffic counter is a utility to facilitate traffic counting. Get rid of paper notes.</p>
                     </div>
                     <img class="project_img" src="../html-css/img/Traffic_Counter.PNG" alt="project_image">
