--- a/site-portfolio/index.html
+++ b/site-portfolio/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <div class="project_item1">
                     <div class="project_label">
-                        <h1 class="project_name"><a href="#">Trafic Counter</a></h1>
+                        <h1 class="project_name"><a href="../brandshop/index.html">Trafic Counter</a></h1>
                         <p class="project_p">Manual traffic counter is a utility to facilitate traffic counting. Get rid of paper notes.</p>
                     </div>
                     <img class="project_img" src="../html-css/img/Traffic_Counter.PNG" alt="project_image">
